<resources>
    <string name="app_name">My CheckSums</string>
    <string name="item_title_about">About</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_title_text">Text</string>
    <string name="tab_title_file">File</string>
    <string name="chip_text_md5">md5</string>
    <string name="chip_text_sha1">sha1</string>
    <string name="chip_text_sha256">sha256</string>
    <string name="label_hash_type">Hash Type</string>
    <string name="text_button_paste">Paste</string>
    <string name="hint_compare_value">Compare value</string>
    <string name="label_md5">MD5</string>
    <string name="text_button_check">Check</string>
    <string name="label_sha1">SHA1</string>
    <string name="label_sha256">SHA256</string>
    <string name="text_button_choose">Choose</string>
    <string name="hint_choose_a_file">Choose a file</string>
    <string name="hint_input_value">Input string</string>
    <string name="text_button_generate">Generate</string>
    <string name="error_empty_string">Empty string</string>
    <string name="label_clip_md5">MD5</string>
    <string name="label_clip_sha1">SHA1</string>
    <string name="label_clip_sha256">SHA256</string>
    <string name="msg_copied">Copied to Clipboard</string>
    <string name="label_sha384">SHA384</string>
    <string name="label_sha512">SHA512</string>
    <string name="text_equal">Equals</string>
    <string name="text_not_equal">Not equals!</string>
    <string name="item_title_clear">Clear</string>
    <string name="title_dialog_chooser">Select a File</string>
    <string name="chip_text_sha384">SHA384</string>
    <string name="chip_text_sha512">SHA512</string>
    <string name="msg_select_hash_type">Select hash type!</string>
    <string name="msg_select_file">Choose a file!</string>
    <string name="about_app">\tMy checksum is a tool for computing checksum of files and texts. After computation, the calculated hash values can be compared against other hashes for verifying data integrity.\n\n\tAvailable hash functions: MD5, SHA1, SHA256, SHA384, SHA512.</string>
    <string name="author">Created by Dang Van Toan</string>
    <string name="email">toandv62@wru.vn</string>
    <string name="required_permission">Permission is Required for getting list of files</string>
</resources>
