<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_16dp"
    tools:context=".ui.FileFragment">

    <TextView
        android:id="@+id/textView2"
        style="@style/EditTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_hash_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/hoz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:singleSelection="true">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_md5"
                style="@style/Widget.MaterialComponents.Chip.Filter.Custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/chip_text_md5" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_sha1"
                style="@style/Widget.MaterialComponents.Chip.Filter.Custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_text_sha1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_sha256"
                style="@style/Widget.MaterialComponents.Chip.Filter.Custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_text_sha256" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_sha384"
                style="@style/Widget.MaterialComponents.Chip.Filter.Custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_text_sha384" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_sha512"
                style="@style/Widget.MaterialComponents.Chip.Filter.Custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_text_sha512" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_file_path"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hoz"
        app:startIconDrawable="@drawable/ic_folder"
        app:startIconTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_file_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:hint="@string/hint_choose_a_file"
            android:inputType="text"
            android:longClickable="false"
            android:paddingStart="@dimen/padding_8dp"
            android:paddingEnd="@dimen/padding_48dp"
            tools:ignore="Autofill,LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btn_file_choose"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_top_button_paste"
        android:background="?android:attr/selectableItemBackground"
        android:padding="@dimen/padding_12dp"
        android:src="@drawable/ic_more_horiz"
        app:layout_constraintBottom_toBottomOf="@+id/tl_file_path"
        app:layout_constraintEnd_toEndOf="@+id/tl_file_path"
        app:layout_constraintTop_toTopOf="@+id/tl_file_path"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_file_compare"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:hint="@string/hint_compare_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_file_path"
        app:startIconDrawable="@drawable/ic_compare_arrows"
        app:startIconTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_file_compare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingStart="@dimen/padding_8dp"
            android:paddingEnd="@dimen/padding_48dp"
            tools:ignore="Autofill,LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btn_file_paste"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_top_button_paste"
        android:background="?android:attr/selectableItemBackground"
        android:padding="@dimen/padding_12dp"
        android:src="@drawable/ic_content_paste"
        app:layout_constraintBottom_toBottomOf="@+id/tl_file_compare"
        app:layout_constraintEnd_toEndOf="@+id/tl_file_compare"
        app:layout_constraintTop_toTopOf="@+id/tl_file_compare"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_file_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:drawablePadding="@dimen/padding_8dp"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_file_compare" />

    <ProgressBar
        android:id="@+id/pb_hash_file"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/btn_file_check"
        app:layout_constraintStart_toStartOf="@+id/btn_file_check"
        app:layout_constraintTop_toTopOf="@+id/btn_file_check" />

    <Button
        android:id="@+id/btn_file_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/text_button_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_file_equal" />

    <TextView
        android:id="@+id/tv_file_label"
        style="@style/EditTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_24dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_file_check" />

    <TextView
        android:id="@+id/tv_file_result"
        style="@style/TextViewResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_file_label" />
</androidx.constraintlayout.widget.ConstraintLayout>